[package]
name = "intel-mkl-src"
version = "0.2.4"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

description = "Redistribution of Intel(R) MKL as a crate"
repository = "https://github.com/termoshtt/rust-intel-mkl"
keywords = ["fft", "blas", "lapack"]
license-file = "mkl_lib/license.txt"
readme = "README.md"

build = "build.rs"
links = "mkl_intel_lp64"

exclude = ["mkl_lib/mkl.tar.xz"]
