[package]
name = "intel-mkl-pack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.intel-mkl-tool]
path = "../intel-mkl-tool"

[dependencies]
anyhow = "1.0.60"
oci-spec = "0.5.7"
ocipkg = "0.1.2"
colored = "2.0.0"
