[package]
name = "intel-mkl-src"
version = "0.4.1"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Redistribution of Intel(R) MKL as a crate"
repository = "https://github.com/termoshtt/rust-intel-mkl"
keywords = ["fft", "blas", "lapack"]
license-file = "License.txt"
readme = "README.md"

build = "build.rs"
links = "mkl_intel_lp64"

exclude = ["mkl_lib/mkl.tar.xz"]

[features]
default = []
use-outdir = []

[build-dependencies.intel-mkl-tool]
version = "0.1.0"
path = "../intel-mkl-tool"
default-features = false

[dev-dependencies]
libc = "0.2.65"
