[package]
name = "intel-mkl-src"
version = "0.4.1"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "Redistribution of Intel(R) MKL as a crate"
repository = "https://github.com/rust-math/intel-mkl-src"
keywords = ["fft", "blas", "lapack"]
license-file = "../License.txt"
readme = "../README.md"

build = "build.rs"
links = "mkl_core"

[features]
default = []
use-shared = []

[build-dependencies.intel-mkl-tool]
version = "0.1.0"
path = "../intel-mkl-tool"
default-features = false

[dev-dependencies]
libc = "0.2.65"
