[package]
name = "intel-mkl-sys"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description = "FFI for Intel(R) MKL"
repository  = "https://github.com/rust-math/intel-mkl-src"
keywords    = ["ffi"]
license     = "MIT"

[dependencies.intel-mkl-src]
path = "../intel-mkl-src"
version = "0.5.0"

[dev-dependencies]
criterion = "0.3.0"
rand = "0.7.2"
approx = "0.3.2"

[[bench]]
name = "cos"
harness = false
