[package]
name = "intel-mkl-sys"
version = "0.2.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

rust-version = "1.61.0"

description = "FFI for Intel(R) MKL"
repository  = "https://github.com/rust-math/intel-mkl-src"
keywords    = ["ffi"]
license     = "MIT"

[features]
default = []

# MKL config
# https://software.intel.com/content/www/us/en/develop/articles/intel-math-kernel-library-intel-mkl-and-pkg-config-tool.html
mkl-static-lp64-iomp   = ["intel-mkl-src/mkl-static-lp64-iomp"]
mkl-static-lp64-seq    = ["intel-mkl-src/mkl-static-lp64-seq"]
mkl-static-ilp64-iomp  = ["intel-mkl-src/mkl-static-ilp64-iomp"]
mkl-static-ilp64-seq   = ["intel-mkl-src/mkl-static-ilp64-seq"]
mkl-dynamic-lp64-iomp  = ["intel-mkl-src/mkl-dynamic-lp64-iomp"]
mkl-dynamic-lp64-seq   = ["intel-mkl-src/mkl-dynamic-lp64-seq"]
mkl-dynamic-ilp64-iomp = ["intel-mkl-src/mkl-dynamic-ilp64-iomp"]
mkl-dynamic-ilp64-seq  = ["intel-mkl-src/mkl-dynamic-ilp64-seq"]

[dependencies]
intel-mkl-src = { path = "../intel-mkl-src", version = "0.7.0", default-features = false }

[dev-dependencies]
criterion = "0.3.6"
rand = "0.8.5"
approx = "0.5.1"

[[bench]]
name = "cos"
harness = false
