[package]
name = "intel-mkl-tool"
version = "0.3.2+mkl2020.1"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"
rust-version = "1.56.0" # MSRV is introduced

description = "CLI utility for redistributiing Intel(R) MKL"
repository  = "https://github.com/rust-math/intel-mkl-src"
keywords    = []
license     = "MIT"

[dependencies]
anyhow = "1.0.58"
derive_more = "0.99.17"
dirs = "4.0.0"
glob = "0.3.0"
walkdir = "2.3.2"

[dev-dependencies]
paste = "1.0.7"
