[package]
name = "intel-mkl-tool"
version = "0.4.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"
rust-version = "1.61.0"

description = "CLI utility for redistributiing Intel(R) MKL"
repository  = "https://github.com/rust-math/intel-mkl-src"
keywords    = []
license     = "MIT"

[dependencies]
anyhow = "1.0.58"
walkdir = "2.3.2"
