[package]
name = "intel-mkl-tool"
version = "0.8.0-rc.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"
rust-version = "1.61.0"

description = "Seek Intel(R) MKL library from system"
repository  = "https://github.com/rust-math/intel-mkl-src"
keywords    = []
license     = "MIT"

readme = "../README.md"

[features]
# Do not allow linking dynamic library for mkl-static-*-iomp
openmp-strict-link-type = []

[dependencies]
anyhow = "1.0.58"
log = "0.4.17"
walkdir = "2.3.2"

[dev-dependencies]
env_logger = "0.9.0"
